revert to an easier way .. let's see how code pipeline likes this approach

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ jacocoTestReport {
     }
 }
 
-task buildZip(type: Zip, dependsOn: [test,jacocoTestReport]) {
+task buildZip(type: Zip, dependsOn: [build]) {
     from compileJava
     from processResources
     into('lib') {
